--- a/MetaExchange.Tests/MetaExchange.Tests.csproj
+++ b/MetaExchange.Tests/MetaExchange.Tests.csproj
@@ -20,4 +20,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MetaExchange.ConsoleApp\MetaExchange.ConsoleApp.csproj" />
+  </ItemGroup>
+
 </Project>
