--- a/MetaExchange.Tests/MetaExchange.Tests.csproj
+++ b/MetaExchange.Tests/MetaExchange.Tests.csproj
@@ -7,10 +7,12 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
@@ -24,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MetaExchange.ConsoleApp\MetaExchange.ConsoleApp.csproj" />
+    <ProjectReference Include="..\MetaExchange.WebApi\MetaExchange.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
