webapi(docker): updated docker file to add new solution

--- a/MetaExchange.WebApi/Dockerfile
+++ b/MetaExchange.WebApi/Dockerfile
@@ -1,32 +1,36 @@
-# Use the official .NET SDK image for building the app
+# Stage 1: Build
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-WORKDIR /app
+WORKDIR /src
 
-# Copy the csproj and restore as distinct layers
-COPY *.csproj ./
+# Copy the solution file and restore dependencies
+COPY MetaExchange.sln .
+COPY MetaExchange.WebApi/MetaExchange.WebApi.csproj MetaExchange.WebApi/
+COPY MetaExchange.ConsoleApp/MetaExchange.ConsoleApp.csproj MetaExchange.ConsoleApp/
 RUN dotnet restore
 
-# Copy the remaining source code and build the project
-COPY . ./
-RUN dotnet publish -c Release -o out
+# Copy all source code and build the project
+COPY . .
+WORKDIR /src/MetaExchange.WebApi
+RUN dotnet publish -c Release -o /app/publish
 
-# Use the official ASP.NET Core runtime image
+# Stage 2: Run
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
 WORKDIR /app
 
 # Copy the published output from the build stage
-COPY --from=build /app/out ./
+COPY --from=build /app/publish .
 
-# Set the environment variable for the ExchangesDirectory
+# Set environment variables if needed
 ENV ExchangesDirectory=/app/Exchanges
 
-# Create the Exchanges directory and add sample data
+# Create the Exchanges directory
 RUN mkdir /app/Exchanges
-# Optionally, copy sample JSON files if available
-COPY Exchanges/*.json /app/Exchanges/
+
+# (Optional) Copy sample exchange JSON files
+COPY MetaExchange.WebApi/Exchanges/*.json /app/Exchanges/
 
 # Expose port 80
 EXPOSE 80
 
-# Set the entry point
+# Define the entry point
 ENTRYPOINT ["dotnet", "MetaExchange.WebApi.dll"]
