docker: added docker compose support for easier deployment

--- a/MetaExchange.WebApi/Dockerfile
+++ b/MetaExchange.WebApi/Dockerfile
@@ -2,16 +2,16 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
 
-# Copy the solution file and project files
-COPY MetaExchange.sln .
+# Copy the WebApi and ConsoleApp project files
 COPY MetaExchange.WebApi/MetaExchange.WebApi.csproj MetaExchange.WebApi/
 COPY MetaExchange.ConsoleApp/MetaExchange.ConsoleApp.csproj MetaExchange.ConsoleApp/
 
 # Restore dependencies
-RUN dotnet restore
+RUN dotnet restore MetaExchange.WebApi/MetaExchange.WebApi.csproj
 
-# Copy all source code
-COPY . .
+# Copy the source code
+COPY MetaExchange.WebApi/ MetaExchange.WebApi/
+COPY MetaExchange.ConsoleApp/ MetaExchange.ConsoleApp/
 
 # Publish the WebApi project
 WORKDIR /src/MetaExchange.WebApi
@@ -21,7 +21,7 @@ RUN dotnet publish -c Release -o /app/publish
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
 WORKDIR /app
 
-# Copy the published output from the build stage
+# Copy the published output
 COPY --from=build /app/publish ./
 
 # Set environment variable for ExchangesDirectory
@@ -30,7 +30,7 @@ ENV ExchangesDirectory=/app/Exchanges
 # Create the Exchanges directory
 RUN mkdir /app/Exchanges
 
-# (Optional) Copy sample exchange JSON files if available
+# (Optional) Copy sample exchange JSON files
 COPY MetaExchange.WebApi/Exchanges/*.json /app/Exchanges/
 
 # Expose port 80
